# Bot-Template-For-DiscordCoreAPI

./: .gitignore  CMakeLists.txt  CMakePresets.json  DLC  HelperFunctions.hpp  License.md  ReadMe.md  main.cpp
Commands/: BotInfo.hpp  CommandsList.hpp  Help.hpp  Play.hpp  PlayRN.hpp  RegisterApplicationCommands.hpp  Test.hpp
Executable/: CMakeLists.txt
